style.css
body,
div {
	padding:0;
	margin:0;
}

body,
div {
	display: flex;
	flex-flow: row wrap;
	justify-content: space-around;
	align-content: stretch;
}

/* Menu */

menu {
	display: flex;
	flex-flow: column wrap;
	width: 300px;
	align-self: flex-start;
	flex: 0 1 auto;
	text-align: center;
}

menu p,
menu ul {
	font-family: 'Open Sans', sans-serif;
	font-size: 16px;
	list-style-type: none;
	display: block;
	letter-spacing: 1px;
}

#proto {
  color: #22313F;
}

.holder {
	border: none;
	background-color: transparent;
	text-align: center;
	width: 100%;
	align-self: flex-start;
}

text {
	font-family: 'Rubik One', sans-serif;
	font-size: 2.5vw;
	text-anchor: middle;
	dominant-baseline: central;
}

svg {
	width: auto;
	height: 70px;
	letter-spacing: 3px;
	cursor: pointer;
}

pattern {
	x:0;
	y:0;
	width: 300%;
	height: 100%;
}

.sliding {
  transition: all 2s ease-in-out;
	align-self: center;
}

.hide {
  height: 0;
	hidden: true;
	display: none;
}

/* Calculator */

#calculator {
	top: 20px;
	width: 300px;
	height: 442px;
	margin-top: 40px;
	flex: 0 1 auto;
	align-self: center;
	justify-content: space-around;
	display: flex;
	flex-flow: row wrap;
	box-shadow: 0px 0px 30px 5px rgba(0,0,0,0.75);
	-webkit-box-shadow: 0px 0px 30px 5px rgba(0,0,0,0.75);
	-moz-box-shadow: 0px 0px 30px 5px rgba(0,0,0,0.75);
  -webkit-touch-callout: none; /* iOS Safari */
    -webkit-user-select: none; /* Chrome/Safari/Opera */
     -khtml-user-select: none; /* Konqueror */
       -moz-user-select: none; /* Firefox */
        -ms-user-select: none; /* Internet Explorer/Edge */
            user-select: none; /* Non-prefixed version, currently
                                  not supported by any browser */
																	/*TODO not pretty*/
}

#total {
	height: 77px;
	width: 100%;
	margin: auto;
	background-color: #fffafa;
	display: flex;
	flex-flow: row wrap;
}

#display {
	float: left;
	width: 225px;
	height: 77px;
	text-align: right;
	display: flex;
	flex-flow: column nowrap;
	justify-content: center;
	align-items: flex-end;
}

#screen {
	flex-basis: 45px;
	font-size: 26px;
	margin-top: 20px;
}

#result {
	flex-basis: 20px;
}

#clear {
	float: right;
	height: 78px;
}

#keyboard {
	height: 375px;
	width: 300px;
	background-color: #D6D7D7;
	text-align: right;
}

.key {
	display: inline;
	height: 75px;
	width: 75px;
	border: 1px solid #D6D7D7;
	background-color: #fffafa;
	float: left;
	text-align: center;
	cursor: pointer;
	font-family: 'Abril Fatface', cursive;
	font-size: 40px;
}

#equals {
	width: 148px;
	background-color: #57eba4;
}

#nroot {
	display: inline;
	font-size: 30px;
	top: -5px;

}

.clears {
	background-color: #c8f8f8;
}

.operators {
	background-color: #9bf1f3;
}

/* Calculator On Hover Effects */

button:hover,
button.hover{
	background-color: #dffbfb;
}

#equals:hover,
#equals.hover{
	background-color: #1adb7f;
}

.operators:hover,
.operators.hover{
	background-color: #57e7eb;
}

.clears:hover,
.clears.hover{
	background-color: #84efef;
}

